k8s/service-openclaw.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openclaw
  name: openclaw
  namespace: openclaw
spec:
  ports:
  - name: http-gateway
    port: 18789
    protocol: TCP
    targetPort: 18789
  - name: http-browser
    port: 18791
    protocol: TCP
    targetPort: 18791
  - name: http-app
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: openclaw
  type: LoadBalancer
