k8s/service-runner.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: runner
  name: runner
  namespace: openclaw
spec:
  ports:
  - name: ssh
    port: 22
    protocol: TCP
    targetPort: 22
  selector:
    app: runner
  type: ClusterIP
