k8s/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"openclaw"},"name":"openclaw","namespace":"openclaw"},"spec":{"ports":[{"name":"http-gateway","port":18789,"protocol":"TCP","targetPort":18789},{"name":"http-browser","port":18791,"protocol":"TCP","targetPort":18791},{"name":"http-app","port":3000,"protocol":"TCP","targetPort":3000}],"selector":{"app":"openclaw"},"type":"LoadBalancer"}}
    creationTimestamp: "2026-05-18T20:49:42Z"
    labels:
      app: openclaw
    name: openclaw
    namespace: openclaw
    resourceVersion: "21881817"
    uid: 6bac5a47-bf2b-4bed-9460-ba274d2bf42a
  spec:
    clusterIP: 10.43.205.25
    clusterIPs:
    - 10.43.205.25
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http-gateway
      port: 18789
      protocol: TCP
      targetPort: 18789
    - name: http-browser
      port: 18791
      protocol: TCP
      targetPort: 18791
    - name: http-app
      port: 3000
      protocol: TCP
      targetPort: 3000
    selector:
      app: openclaw
    sessionAffinity: None
    type: LoadBalancer
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"runner"},"name":"runner","namespace":"openclaw"},"spec":{"ports":[{"name":"ssh","port":22,"protocol":"TCP","targetPort":22}],"selector":{"app":"runner"},"type":"ClusterIP"}}
    creationTimestamp: "2026-05-18T20:49:42Z"
    labels:
      app: runner
    name: runner
    namespace: openclaw
    resourceVersion: "21796972"
    uid: cb5be2f9-f6a2-4589-b097-d8f9b7acda17
  spec:
    clusterIP: 10.43.251.49
    clusterIPs:
    - 10.43.251.49
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: ssh
      port: 22
      protocol: TCP
      targetPort: 22
    selector:
      app: runner
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
