k8s/virtualservice-openclaw.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: openclaw.kdvops.com
  generation: 1
  name: openclaw-vs
  namespace: openclaw
spec:
  gateways:
  - istio-system/kdvops-gateway
  hosts:
  - openclaw.kdvops.com
  http:
  - match:
    - authority:
        exact: openclaw.kdvops.com
    route:
    - destination:
        host: openclaw.openclaw.svc.cluster.local
        port:
          number: 18789
